# spineax

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: Dockerfile  build.sh
src/spineax/cudss/: batch_solve.cpp  pseudo_batch_solve.cu  single_solve.cpp  single_solve_re.cpp  solver.py
