[build-system]
requires = [
    "scikit-build-core >= 0.5", 
    "nanobind", 
    "jax[cuda12]", 
    "nvidia-cudss-cu12",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "spineax"
version = "0.0.2"
requires-python = ">=3.10"
authors = [
    {name = "John Viljoen"}
]
dependencies = [
    "ninja", # for hot re-building on editable install
    "jaxtyping"
]

[project.optional-dependencies]
cuda11 = [
    "jax[cuda11]",
    "nvidia-cudss-cu11"
]
cuda12 = [
    "jax[cuda12]",
    "nvidia-cudss-cu12"
]
cuda13 = [
    "jax[cuda13]",
    "nvidia-cudss-cu13"
]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
editable.rebuild = true # in an editable install rebuild upon changes

[tool.setuptools.packages.find]
where = [
    "src"
]
